--- a/views/partials/calendar.pug
+++ b/views/partials/calendar.pug
@@ -1,6 +1,6 @@
 mixin calendarblock()
   h3 
-    span#day Upcoming events
+    span#day <i class="fa fa-calendar" aria-hidden="true"></i> Upcoming events
 
     .row
       .col
