--- a/views/partials/presence.pug
+++ b/views/partials/presence.pug
@@ -1,6 +1,6 @@
 mixin presenceblock(presence)
   
-  h3#people_away_title Where is everyone?
+  h3#people_away_title <i class="fa fa-location-arrow" aria-hidden="true"></i> Where is everyone?
   .row#people_away
     
 
