--- a/widgets/meter/meter.scss
+++ b/widgets/meter/meter.scss
@@ -1,12 +1,12 @@
 // ----------------------------------------------------------------------------
 // Sass declarations
 // ----------------------------------------------------------------------------
-$background-color:  #9c4274;
+$background-color:  #eee;
 
-$title-color:       rgba(255, 255, 255, 0.7);
-$moreinfo-color:    rgba(255, 255, 255, 0.3);
+$title-color:       rgba(0,0,0, 0.7);
+$moreinfo-color:    rgba(0,0,0, 0.7);
 
-$meter-background:  darken($background-color, 15%);
+$meter-background:  #ddd;
 
 // ----------------------------------------------------------------------------
 // Widget-meter styles
@@ -17,7 +17,7 @@ $meter-background:  darken($background-color, 15%);
 
   input.meter {
     background-color: $meter-background;
-    color: #fff;
+    color: #777;
   }
 
   .title {
