--- a/widgets/number/number.scss
+++ b/widgets/number/number.scss
@@ -1,11 +1,11 @@
 // ----------------------------------------------------------------------------
 // Sass declarations
 // ----------------------------------------------------------------------------
-$background-color:  #47bbb3;
-$value-color:       #fff;
+$background-color:  #eee;
+$value-color:       #222;
 
-$title-color:       rgba(255, 255, 255, 0.7);
-$moreinfo-color:    rgba(255, 255, 255, 0.7);
+$title-color:       #444;
+$moreinfo-color:    #444;
 
 // ----------------------------------------------------------------------------
 // Widget-number styles
