--- a/widgets/text/text.scss
+++ b/widgets/text/text.scss
@@ -12,9 +12,14 @@ $moreinfo-color:    rgba(0,0,0, 0.7);
 .widget-text {
 
   background-color: $background-color;
+  
+  h3{
+    padding: 10px;
+  }
 
   .title {
     color: $title-color;
+    padding: 10px;
   }
 
   .more-info {
@@ -22,11 +27,12 @@ $moreinfo-color:    rgba(0,0,0, 0.7);
   }
 
   .updated-at {
-    color: rgba(0,0,0, 0.7);
+    color: rgba(0, 0, 0, 0.1);
   }
 
 
   &.large h3 {
     font-size: 65px;
+    padding: 10px;
   }
 }
